--- a/style.css
+++ b/style.css
@@ -48,15 +48,40 @@
 
 }
 
+#highlights {
+    padding: 24px;
+    background: linear-gradient(0deg, rgb(227,255,253), rgb(202,243,240));
+}
+
+#highlights h2 {
+    text-transform: uppercase;
+    text-align: center;
+    font-size: 40px;
+    color: rgb(59, 65, 64);    
+}
+
 #destinations {
     display: flex;
     width: 90%;
     margin: auto;
+    justify-content: center;
     margin-bottom: 40px;
 }
 
 .destination {
     margin: 0 20px;
+    text-transform: uppercase;
+}
+
+.destination p {
+    text-align: center;
+    font-size: 24px ;
+    color: rgb(124,123,123);
+    margin: 20px 0;
+}
+
+.destination strong {
+    color: rgb(0,160,117);
 }
 
 .destination img {
