--- a/grid-theory/styles.css
+++ b/grid-theory/styles.css
@@ -11,6 +11,10 @@ ul {
   width: 800px;
   margin: 10px auto;
   padding: 10px;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 100px 200px;
+
 }
 
 li {
@@ -18,4 +22,13 @@ li {
   text-align: center;
   width: 200px;
   margin: 20px auto;
+}
+
+/* li:first-of-type {
+
+} */
+
+li:nth-of-type(3) {
+  background-color: yellow;
+  grid-column: 1 /span 2;
 }
