--- a/shared.css
+++ b/shared.css
@@ -28,7 +28,7 @@ header a {
     border-radius: 6px;
 }
 
-header a:hover {
+header nav a:hover {
     color: rgb(77,77,77);
     background-color: rgb(255, 251, 0);
 }
@@ -48,11 +48,6 @@ header ul {
 
 header li {
     margin-left: 20px;
-}
-
-#page-logo {
-    border: 1px solid cyan;
-    border-style: dotted;
 }
 
 ul {
